--- a/services/comfy/complete/dockerfile.comfy.cuda.complete
+++ b/services/comfy/complete/dockerfile.comfy.cuda.complete
@@ -4,7 +4,7 @@ FROM core AS complete
 COPY --chown=comfy:comfy ./extra-requirements.txt ./extra-requirements.txt
 
 # Install additional Python requirements
-RUN --mount=type=cache,mode=0755,uid=1000,gid=1000,target=/home/comfy/.cache/pip \
+RUN --mount=type=cache,mode=0755,target=/home/comfy/.cache/pip \
     source $VENV_PATH/bin/activate && \
     pip install -r extra-requirements.txt
 
